# QMl

./: .gitignore.txt  gitignore
audVidRecorder/: CMakeLists.txt  Main.qml  main.cpp  videorecorder.cpp  videorecorder.h
libraryManagementQml/: CMakeLists.txt  assign.qml  bookList.qml  main.cpp  mainwindow.cpp  mainwindow.h
recorder/: CMakeLists.txt  Main.qml  audiorecorder.cpp  audiorecorder.h  dataManager.cpp  dataManager.h  main.cpp
recorder/recordedFiles/: record_0001.m4a  record_0002.m4a  record_0003.m4a
recorderOpenCV/: CMakeLists.txt  Main.qml  audiocapturehandler.cpp  audiocapturehandler.h  datamanager.cpp  datamanager.h  main.cpp  videocapturehandler.cpp  videocapturehandler.h
recorderOpenCV/recordedFiles/: record_0001.m4a
